Altered icon according to the API data

--- a/index.html
+++ b/index.html
@@ -66,7 +66,9 @@
           <p>Wind: <span id="wind">5</span>km/h</p>
         </div>
 
-        <div class="col-4 present-weather">🌤</div>
+        <div class="col-4 present-weather">
+          <img src="" alt="" id="icon" />
+        </div>
       </div>
       <div class="row text-center">
         <div class="col-2">
