unit conversion implemented

--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
         <div class="col-3 conditions">
           <span class="temperature" id="currentTemperature">17</span>
           <span class="units">
-            <a href="#" class="celcius" id="degreesC">ºC</a>
-            <!-- <a href="#" class="fahrenheit" id="degreesF">ºF</a> -->
+            <a href="#" class="active" id="degreesC">ºC</a>
+            <a href="#" id="degreesF">ºF</a>
           </span>
 
           <h3><span id="max">24</span>º/<span id="min">13</span>º</h3>
