--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
           <img src="" alt="" id="icon" />
         </div>
       </div>
-      <div class="row text-center">
+      <!-- <div class="row text-center">
         <div class="col-2">
           <h4>tue, 28 🌤</h4>
           <ul>
@@ -105,11 +105,13 @@
             <li>24ºC</li>
             <li>12ºC</li>
           </ul>
-        </div>
-      </div>
+        </div> -->
+      <!-- </div> -->
     </div>
-    <p class="link">
-      <a href="https://github.com/RitaCavalheiro/Cool-app">Open-source code</a>
+    <p class="gitLink">
+      <a href="https://github.com/RitaCavalheiro/Cool-app" class="gitLink"
+        >Open-source code</a
+      >
       by Rita Cavalheiro
     </p>
     <script src="src/app.js"></script>
