forecast js function

--- a/index.html
+++ b/index.html
@@ -70,43 +70,8 @@
           <img src="" alt="" id="icon_main_temp" />
         </div>
       </div>
-      <div class="weather-forecast">
-        <div class="row text-center">
-          <div class="col-2 weather-forecast-temperature">
-            <h4 class="weather-forecast-date">tue, 28 <span>🌤</span></h4>
-            <ul>
-              <li class="weather-forecast-temperature-max">22ºC</li>
-              <li class="weather-forecast-temperature-min">9ºC</li>
-            </ul>
-          </div>
-          <!-- <div class="col-2">
-            <h4>wed, 29 🌤</h4>
-            <ul>
-              <li>25ºC</li>
-              <li>10ºC</li>
-            </ul>
-          </div>
-          <div class="col-2">
-            <h4>thu, 30 🌤</h4>
-            <ul>
-              <li>27ºC</li>
-              <li>12ºC</li>
-            </ul>
-          </div>
-          <div class="col-2">
-            <h4>fri, 1 ☀️</h4>
-            <ul>
-              <li>24ºC</li>
-              <li>15ºC</li>
-            </ul>
-          </div>
-          <div class="col-2">
-            <h4>sat, 2 🌤</h4>
-            <ul>
-              <li>24ºC</li>
-              <li>12ºC</li>
-            </ul>
-          </div> -->
+      <div class="weather-forecast" id="forecast">
+
         </div>
       </div>
     </div>
