Display forecast API data

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
       <div class="row">
         <div class="col-4 date">
           <h1 id="city">Coimbra</h1>
-          <p id="date">Monday, 27 sep</p>
+          <p class="day" id="date">Monday, 27 sep</p>
           <p id="description">Sunny</p>
         </div>
 
