Links opening in a new tab

--- a/index.html
+++ b/index.html
@@ -79,10 +79,10 @@
     </div>
 
     <p class="gitLink">
-      <a href="https://github.com/RitaCavalheiro/the_weather_app" class="gitLink"
+      <a href="https://github.com/RitaCavalheiro/the_weather_app" target="_blank" class="gitLink"
         >Open-source code</a
       >
-      by <a href="https://www.linkedin.com/in/rita-cavalheiro-830120104/" class="linkedin"> Rita Cavalheiro</a>
+      by <a href="https://www.linkedin.com/in/rita-cavalheiro-830120104/" target="_blank" class="linkedin"> Rita Cavalheiro</a>
     </p>
     <script src="src/app.js"></script>
   </body>
